KinD/cloudKind/manifestos/grpcroute-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-grpc
  namespace: network
spec:
  replicas: 2
  selector:
    matchLabels: { app: demo-grpc }
  template:
    metadata:
      labels: { app: demo-grpc }
    spec:
      containers:
        - name: grpcbin
          image: moul/grpcbin
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
            requests:
              memory: "64Mi"
              cpu: "125m"
          ports: [{ containerPort: 9000 }]
---
apiVersion: v1
kind: Service
metadata:
  name: demo-grpc
  namespace: network
spec:
  selector: { app: demo-grpc }
  ports: [{ port: 9000, targetPort: 9000, appProtocol: kubernetes.io/h2c }]
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: demo-grpc
  namespace: network
spec:
  parentRefs:
    - name: cilium-gateway
      sectionName: https
  hostnames:
    - "grpc.0a0f122c.nip.io"
  rules:
    - backendRefs:
        - name: demo-grpc
          port: 9000
