KinD/cloudKind/manifestos/httproute-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: network
spec:
  replicas: 2
  selector:
    matchLabels: { app: demo-app }
  template:
    metadata:
      labels: { app: demo-app }
    spec:
      containers:
        - name: demo-app
          image: nginxdemos/hello:plain-text
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
            requests:
              memory: "64Mi"
              cpu: "125m"
          ports: [{ containerPort: 80 }]
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: network
spec:
  selector: { app: demo-app }
  ports: [{ port: 80, targetPort: 80 }]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-app
  namespace: network
spec:
  parentRefs:
    - name: cilium-gateway
  hostnames:
    - "app.0a0f122c.nip.io"
  rules:
    - backendRefs:
        - name: demo-app
          port: 80
